--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ target/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Added by cargo
+
+/target
+
+asn-country-ipv4.mmdb
+asn-ipv4.mmdb
+asn-country-ipv6.mmdb
+asn-ipv6.mmdb
