--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ serde = {version = "1.0.219", features = ["derive"]}
 tokio = {version = "1.44.1", features = ["full"]}
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+
+[dev-dependencies]
+tower = "0.5.2"
+
